// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview: update business details modal renders correctly when opened for restricted account 1`] = `
<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Payments and deposits are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account with current deadline 1`] = `
<div
  aria-labelledby="components-modal-header-1"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-1"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Additional information is required to verify your business. Update by 7pm Dec 31, 2021 to avoid a disruption in deposits.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account without current deadline 1`] = `
<div
  aria-labelledby="components-modal-header-2"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-2"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Payments and deposits are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;
